/****************************************************************************
 * Copyright 2021 EPAM Systems
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 ***************************************************************************/

import { vi } from 'vitest';
import { withThemeAndStoreProvider } from 'src/testUtils/storeProviders';

import { render, screen } from '@testing-library/react';
import { MONOMER_LIBRARY_FAVORITES, MONOMER_TYPES } from '../../../constants';

import { MonomerList } from './MonomerList';
import { preset } from 'src/testMockData/monomerPresets';

describe('Monomer List', () => {
  const duplicatePreset = vi.fn();
  const editPreset = vi.fn();
  const onItemClick = vi.fn();
  const initialState = {
    library: {
      searchFilter: '',
      favorites: {},
      defaultRnaPresets: [],
      monomers: [
        {
          props: {
            BranchMonomer: 'false',
            MonomerCaps: { R1: 'H' },
            MonomerCode: '',
            MonomerName: 'Phe4SD',
            MonomerNaturalAnalogCode: 'F',
            MonomerType: 'PEPTIDE',
            Name: '(2S)-2-amino-3-{4-[(4S)-2,6-dioxo-1,3-diazinane-4-amido]phenyl}propanoic acid',
          },
          struct: {},
        },
        {
          props: {
            BranchMonomer: 'false',
            MonomerCaps: { R1: 'H' },
            MonomerCode: '',
            MonomerName: 'PEG2',
            MonomerNaturalAnalogCode: '.',
            MonomerType: 'CHEM',
            Name: 'Diethylene Glycol',
          },
          struct: {},
        },
      ],
    },
    rnaBuilder: {
      presetsDefault: [preset],
      presetsCustom: [],
      groupItemValidations: {
        Bases: [],
        Sugars: [],
        Phosphates: [],
      },
    },
  };

  it('should render correct with groups', () => {
    const view = render(
      withThemeAndStoreProvider(
        <MonomerList
          libraryName={MONOMER_TYPES.PEPTIDE}
          onItemClick={onItemClick}
          duplicatePreset={duplicatePreset}
          editPreset={editPreset}
        />,
        initialState,
      ),
    );

    const currentItem = screen.getByText('Phe4SD');
    expect(currentItem).toBeInTheDocument();

    expect(view).toMatchSnapshot();
  });

  it('should filter presets by AxoLabs alias', () => {
    render(
      withThemeAndStoreProvider(
        <MonomerList
          libraryName={MONOMER_LIBRARY_FAVORITES}
          onItemClick={onItemClick}
          duplicatePreset={duplicatePreset}
          editPreset={editPreset}
        />,
        {
          ...initialState,
          library: {
            ...initialState.library,
            defaultRnaPresets: [
              {
                name: 'A',
                aliasAxoLabs: '(5MdC)',
              },
            ],
            searchFilter: '(5mdc)',
          },
          rnaBuilder: {
            ...initialState.rnaBuilder,
            presetsDefault: [
              {
                ...preset,
                name: 'A',
                favorite: true,
              },
            ],
          },
        },
      ),
    );

    expect(screen.getByText('Presets')).toBeInTheDocument();
    expect(screen.getByText('A')).toBeInTheDocument();
  });

  it('should render correct without groups', () => {
    const view = render(
      withThemeAndStoreProvider(
        <MonomerList
          libraryName={MONOMER_TYPES.CHEM}
          onItemClick={onItemClick}
          duplicatePreset={duplicatePreset}
          editPreset={editPreset}
        />,
        initialState,
      ),
    );

    const currentItem = screen.getByText('PEG2');
    expect(currentItem).toBeInTheDocument();

    expect(view).toMatchSnapshot();
  });
});
