// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Monomer List > should render correct with groups 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="css-15k7m6m-MonomerListContainer eez3m0t0"
      >
        <div
          class="css-1roke0u-GroupContainerRow-GroupContainerColumn e8901gh2"
        >
          <div
            class="css-1ls8773-ItemsContainer e8901gh0"
          >
            <div
              class="css-ia0osi-Card e1fkopzz0"
              data-monomer-item-id="Phe4SD___(2S)-2-amino-3-{4-[(4S)-2,6-dioxo-1,3-diazinane-4-amido]phenyl}propanoic acid"
              data-testid="Phe4SD___(2S)-2-amino-3-{4-[(4S)-2,6-dioxo-1,3-diazinane-4-amido]phenyl}propanoic acid"
            >
              <span
                class="css-1da7ffc-CardTitle e1fkopzz2"
              >
                Phe4SD
              </span>
              <div
                aria-label=""
                class="css-1dm515m-AutochainIconWrapper e1fkopzz4"
                data-mui-internal-clone-element="true"
              >
                <svg
                  class="autochain css-p643xf-AutochainIcon e1fkopzz3"
                  name="monomer-autochain"
                />
              </div>
              <button
                aria-label="Toggle favorite"
                class="star "
                type="button"
              >
                ★
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="css-15k7m6m-MonomerListContainer eez3m0t0"
    >
      <div
        class="css-1roke0u-GroupContainerRow-GroupContainerColumn e8901gh2"
      >
        <div
          class="css-1ls8773-ItemsContainer e8901gh0"
        >
          <div
            class="css-ia0osi-Card e1fkopzz0"
            data-monomer-item-id="Phe4SD___(2S)-2-amino-3-{4-[(4S)-2,6-dioxo-1,3-diazinane-4-amido]phenyl}propanoic acid"
            data-testid="Phe4SD___(2S)-2-amino-3-{4-[(4S)-2,6-dioxo-1,3-diazinane-4-amido]phenyl}propanoic acid"
          >
            <span
              class="css-1da7ffc-CardTitle e1fkopzz2"
            >
              Phe4SD
            </span>
            <div
              aria-label=""
              class="css-1dm515m-AutochainIconWrapper e1fkopzz4"
              data-mui-internal-clone-element="true"
            >
              <svg
                class="autochain css-p643xf-AutochainIcon e1fkopzz3"
                name="monomer-autochain"
              />
            </div>
            <button
              aria-label="Toggle favorite"
              class="star "
              type="button"
            >
              ★
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Monomer List > should render correct without groups 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="css-15k7m6m-MonomerListContainer eez3m0t0"
      >
        <div
          class="css-1roke0u-GroupContainerRow-GroupContainerColumn e8901gh2"
        >
          <div
            class="css-1ls8773-ItemsContainer e8901gh0"
          >
            <div
              class="css-t26n47-Card e1fkopzz0"
              data-monomer-item-id="PEG2___Diethylene Glycol"
              data-testid="PEG2___Diethylene Glycol"
            >
              <span
                class="css-1da7ffc-CardTitle e1fkopzz2"
              >
                PEG2
              </span>
              <div
                aria-label=""
                class="css-1dm515m-AutochainIconWrapper e1fkopzz4"
                data-mui-internal-clone-element="true"
              >
                <svg
                  class="autochain css-p643xf-AutochainIcon e1fkopzz3"
                  name="monomer-autochain"
                />
              </div>
              <button
                aria-label="Toggle favorite"
                class="star "
                type="button"
              >
                ★
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="css-15k7m6m-MonomerListContainer eez3m0t0"
    >
      <div
        class="css-1roke0u-GroupContainerRow-GroupContainerColumn e8901gh2"
      >
        <div
          class="css-1ls8773-ItemsContainer e8901gh0"
        >
          <div
            class="css-t26n47-Card e1fkopzz0"
            data-monomer-item-id="PEG2___Diethylene Glycol"
            data-testid="PEG2___Diethylene Glycol"
          >
            <span
              class="css-1da7ffc-CardTitle e1fkopzz2"
            >
              PEG2
            </span>
            <div
              aria-label=""
              class="css-1dm515m-AutochainIconWrapper e1fkopzz4"
              data-mui-internal-clone-element="true"
            >
              <svg
                class="autochain css-p643xf-AutochainIcon e1fkopzz3"
                name="monomer-autochain"
              />
            </div>
            <button
              aria-label="Toggle favorite"
              class="star "
              type="button"
            >
              ★
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
